Initial checkin of code to support returning additional transcription data for transcription id