@@ -2,12 +2,10 @@ package uk.gov.hmcts.darts.transcriptions.mapper;
 
 import lombok.experimental.UtilityClass;
 import uk.gov.hmcts.darts.common.entity.CourtCaseEntity;
-import uk.gov.hmcts.darts.common.entity.TranscriptionCommentEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionDocumentEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionTypeEntity;
 import uk.gov.hmcts.darts.common.entity.TranscriptionUrgencyEntity;
-import uk.gov.hmcts.darts.common.entity.TranscriptionWorkflowEntity;
 import uk.gov.hmcts.darts.common.exception.DartsApiException;
 import uk.gov.hmcts.darts.transcriptions.exception.TranscriptionApiError;
 import uk.gov.hmcts.darts.transcriptions.model.TranscriptionResponse;
@@ -15,7 +13,6 @@ import uk.gov.hmcts.darts.transcriptions.model.TranscriptionTypeResponse;
 import uk.gov.hmcts.darts.transcriptions.model.TranscriptionUrgencyResponse;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static java.util.Comparator.comparing;
@@ -64,30 +61,12 @@ public class TranscriptionResponseMapper {
             transcriptionResponse.setFrom(transcriptionEntity.getCreatedBy().getUsername());
 
             if (transcriptionEntity.getTranscriptionStatus() != null) {
-                transcriptionResponse.setStatus(transcriptionEntity.getTranscriptionStatus().getDisplayName());
+                transcriptionResponse.setStatus(transcriptionEntity.getTranscriptionStatus().getStatusType());
             }
 
             transcriptionResponse.setReceived(transcriptionEntity.getCreatedDateTime());
-
-            // add comments mapped to the workflow that is also mapped to the transaction
-            List<String> comments = transcriptionEntity.getTranscriptionWorkflowEntities().stream()
-                .map(twe -> twe.getTranscriptionCommentEntities().stream()
-                    .map(TranscriptionCommentEntity::getComment))
-                .flatMap(list -> list.toList().stream()).collect(Collectors.toList());
-
-            // if we have at least one workflow then take the first one and set the workflow from and
-            // the date the transcription was received
-            Optional<TranscriptionWorkflowEntity> transcriptionWorkflow
-                = transcriptionEntity.getTranscriptionWorkflowEntities().stream().findFirst();
-            if (transcriptionWorkflow.isPresent()) {
-                transcriptionResponse.setFrom(transcriptionWorkflow.get().getWorkflowActor().getUsername());
-                transcriptionResponse.setReceived(transcriptionWorkflow.get().getWorkflowTimestamp());
-            }
-
-            // add comments mapped to transaction
-            comments.addAll(transcriptionEntity.getTranscriptionCommentEntities().stream().map(
-                TranscriptionCommentEntity::getComment).toList());
-            transcriptionResponse.setComments(comments);
+            transcriptionResponse.setComments(transcriptionEntity.getTranscriptionCommentEntities().stream().map(
+                TranscriptionCommentEntity::getComment).collect(Collectors.toList()));
 
             final var latestTranscriptionDocumentEntity = transcriptionEntity.getTranscriptionDocumentEntities()
                 .stream()
